fix margins on mobile nav
fix margins on mobile nav

--- a/style.css
+++ b/style.css
@@ -744,5 +744,8 @@ li:not(:first-child):before {
         font-size: 14px;
         padding: 0 !important;
       }
+      .projNav li:not(:first-child):before {
+          content: "  ";
+      }
 
     }
